--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,6 @@
-NEXT_PUBLIC_API_BASE=
-NEXT_PUBLIC_API_KEY=
+NEXT_PUBLIC_USE_SHEETS=0
+NEXT_PUBLIC_SHEETS_API_BASE_URL=
+NEXT_PUBLIC_SHEETS_API_KEY=
 
 # We will point these to a Google Apps Script Web App that fronts Google Sheets
 # (Sheets = DB). Do not call any live API here; just wire the helpers.
