feat: bridge GAS through server and load masters dynamically

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,3 @@
-NEXT_PUBLIC_USE_SHEETS=0
-NEXT_PUBLIC_SHEETS_API_BASE_URL=
-NEXT_PUBLIC_SHEETS_API_KEY=
-
-# We will point these to a Google Apps Script Web App that fronts Google Sheets
-# (Sheets = DB). Do not call any live API here; just wire the helpers.
+# Copy to .env.local and fill in your GAS deployment values for local development
+GAS_BASE_URL=
+GAS_API_KEY=
