feat: proxy GAS API and load masters dynamically

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 # Google Apps Script endpoint configuration
+# GAS_BASE_URL should be the full https://script.googleusercontent.com/... URL from the deployed Web App
 GAS_BASE_URL=
+# GAS_API_KEY must match the key stored in the GAS Script Properties
 GAS_API_KEY=
